# DarioTurchi

./: README.md
Configurator_code/: AssembledPC.cpp  AssembledPC.h  AssembledPCDecorator.cpp  AssembledPCDecorator.h  CMakeLists.txt  CPU.cpp  CPU.h  Case.cpp  Case.h  Component.cpp  Component.h  ComponentsDatabase.h  Controller.cpp  Controller.h  GraphicCard.cpp  GraphicCard.h  Motherboard.cpp  Motherboard.h  PSU.cpp  PSU.h  RAM.cpp  RAM.h  Storage.cpp  Storage.h  main.cpp
Configurator_code/test/: AssembledPCDecoratorTest.cpp  AssembledPCTest.cpp  CMakeLists.txt  CPUFixture.cpp  CPUTest.cpp  CaseTest.cpp  ComponentTest.cpp  GraphicCardFixture.cpp  GraphicCardTest.cpp  MotherboardTest.cpp  PSUFixture.cpp  PSUTest.cpp  RAMTest.cpp  StorageTest.cpp
